<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">АртМурка</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="yes" >Так</string>
    <string name="no" >Ні</string>
    <string name="call" >Зателефонувати</string>
    <string name="money" > грн.</string>
    <string name="exit" > Натисніть ще раз для виходу</string>
    <string name="article" >артикул</string>



    <string name="no_internet">Відсутній інтернет</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="about_delivery" formatted="false"><![CDATA[ \u0421\u043F\u043E\u0441\u043E\u0431\u0438 \u0434\u043E\u0441\u0442\u0430\u0432\u043A\u0438:\r\n\r\n\u0421\u0430\u043C\u043E\u0432\u0438\u0432\u0456\u0437: \u043C\u0456\u0441\u0442\u043E \u041A\u0438\u0457\u0432, \u043C\u0435\u0442\u0440\u043E \u0425\u0430\u0440\u043A\u0456\u0432\u0441\u044C\u043A\u0430. \u0423 \u0442\u0430\u043A\u043E\u043C\u0443 \u0432\u0438\u043F\u0430\u0434\u043A\u0443 \u0412\u0438 \u043C\u043E\u0436\u0435\u0442\u0435 \u0437\u0435\u043A\u043E\u043D\u043E\u043C\u0438\u0442\u0438 \u0433\u0440\u043E\u0448\u0456 \u043D\u0430 \u0434\u043E\u0441\u0442\u0430\u0432\u0446\u0456. \u0414\u043B\u044F \u0446\u044C\u043E\u0433\u043E \u0437\u0432\'\u044F\u0436\u0456\u0442\u044C\u0441\u044F \u0437 \u043D\u0430\u043C\u0438, \u0449\u043E\u0431 \u0434\u043E\u043C\u043E\u0432\u0438\u0442\u0438\u0441\u044F \u043F\u0440\u043E \u0447\u0430\u0441 \u0442\u0430 \u043C\u0456\u0441\u0446\u0435.\r\n\r\n\u041E\u043F\u043B\u0430\u0442\u0430: \u0433\u043E\u0442\u0456\u0432\u043A\u043E\u044E \u043F\u0440\u0438 \u0437\u0443\u0441\u0442\u0440\u0456\u0447\u0456.\r\n\r\n\u0415\u043A\u0441\u043F\u0440\u0435\u0441–\u0434\u043E\u0441\u0442\u0430\u0432\u043A\u0430 \u043A\u043E\u043C\u043F\u0430\u043D\u0456\u0454\u044E–\u043F\u0435\u0440\u0435\u0432\u0456\u0437\u043D\u0438\u043A\u043E\u043C (\"\u041D\u043E\u0432\u0430 \u041F\u043E\u0448\u0442\u0430\"). \u0412\u0430\u0440\u0442\u0456\u0441\u0442\u044C \u0434\u043E\u0441\u0442\u0430\u0432\u043A\u0438 \u0437\u0433\u0456\u0434\u043D\u043E \u0443\u043C\u043E\u0432 \u043F\u0435\u0440\u0435\u0432\u0456\u0437\u043D\u0438\u043A\u0430. \u0422\u0435\u0440\u043C\u0456\u043D \u0434\u043E\u0441\u0442\u0430\u0432\u043A\u0438 \u2013 1-3 \u0434\u043E\u0431\u0438.\r\n\r\n\u041E\u043F\u043B\u0430\u0442\u0430: 100% \u043F\u0440\u0435\u0434\u043E\u043F\u043B\u0430\u0442\u0430 \u043D\u0430 \u043A\u0430\u0440\u0442\u0443 \u0447\u0438 \u043F\u043E\u0441\u043B\u0443\u0433\u043E\u044E \"\u0437\u0432\u043E\u0440\u043E\u0442\u043D\u044F\" \u0434\u043E\u0441\u0442\u0430\u0432\u043A\u0430.\r\n\r\n\u0414\u043E\u0441\u0442\u0430\u0432\u043A\u0430 \u043F\u043E\u0441\u0438\u043B\u043A\u0438\/\u0431\u0430\u043D\u0434\u0435\u0440\u043E\u043B\u0456 \u043F\u043E \u0423\u043A\u0440\u0430\u0457\u043D\u0456 \u0437\u0434\u0456\u0439\u0441\u043D\u044E\u0454\u0442\u044C\u0441\u044F \u0437\u0430 \u0434\u043E\u043F\u043E\u043C\u043E\u0433\u043E\u044E \u043D\u0430\u0446\u0456\u043E\u043D\u0430\u043B\u044C\u043D\u043E\u0433\u043E \u043E\u043F\u0435\u0440\u0430\u0442\u043E\u0440\u0430 \u043F\u043E\u0448\u0442\u043E\u0432\u043E\u0433\u043E \u0437\u0432\'\u044F\u0437\u043A\u0443 \"\u0423\u043A\u0440\u043F\u043E\u0448\u0442\u0430\". \u0412\u0430\u0440\u0442\u0456\u0441\u0442\u044C \u0434\u043E\u0441\u0442\u0430\u0432\u043A\u0438 \u0437\u0433\u0456\u0434\u043D\u043E \u0443\u043C\u043E\u0432 \u043F\u0435\u0440\u0435\u0432\u0456\u0437\u043D\u0438\u043A\u0430. \u0422\u0435\u0440\u043C\u0456\u043D \u0434\u043E\u0441\u0442\u0430\u0432\u043A\u0438 \u2013 4-7 \u0434\u043D\u0456\u0432.\r\n\r\n\u0414\u043E\u0441\u0442\u0430\u0432\u043A\u0430 \u0437\u0430 \u043C\u0435\u0436\u0456 \u0423\u043A\u0440\u0430\u0457\u043D\u0438 \u043E\u0431\u0447\u0438\u0441\u043B\u044E\u0454\u0442\u044C\u0441\u044F \u043E\u043A\u0440\u0435\u043C\u043E \u0443 \u043A\u043E\u0436\u043D\u043E\u043C\u0443 \u0456\u043D\u0434\u0438\u0432\u0456\u0434\u0443\u0430\u043B\u044C\u043D\u043E\u043C\u0443 \u0432\u0438\u043F\u0430\u0434\u043A\u0443.\r\n\r\n\u041E\u043F\u043B\u0430\u0442\u0430: 100% \u043F\u0440\u0435\u0434\u043E\u043F\u043B\u0430\u0442\u0430 \u043D\u0430 \u043A\u0430\u0440\u0442\u0443\r\n\r\n\u041F\u043E\u0432\u0435\u0440\u043D\u0435\u043D\u043D\u044F \u0442\u043E\u0432\u0430\u0440\u0443 \u0442\u0430 \u0432\u0456\u0434\u0448\u043A\u043E\u0434\u0443\u0432\u0430\u043D\u043D\u044F \u0439\u043E\u0433\u043E \u0432\u0430\u0440\u0442\u043E\u0441\u0442\u0456\r\n\r\n\u042F\u043A\u0449\u043E \u0437 \u0431\u0443\u0434\u044C-\u044F\u043A\u043E\u0457 \u043F\u0440\u0438\u0447\u0438\u043D\u0438 \u043E\u0442\u0440\u0438\u043C\u0430\u043D\u043D\u0438\u0439 \u0442\u043E\u0432\u0430\u0440 \u0412\u0430\u043C \u043D\u0435 \u043F\u0456\u0434\u0456\u0439\u0448\u043E\u0432, \u0442\u043E \u0437\u0433\u0456\u0434\u043D\u043E \u0417\u0430\u043A\u043E\u043D\u0443 \u0423\u043A\u0440\u0430\u0457\u043D\u0438 \"\u041F\u0440\u043E \u0437\u0430\u0445\u0438\u0441\u0442 \u043F\u0440\u0430\u0432 \u0441\u043F\u043E\u0436\u0438\u0432\u0430\u0447\u0456\u0432\" \u0432\u0456\u0434 13.01.2006 \u0440. \u0412\u0438 \u043C\u043E\u0436\u0435\u0442\u0435 \u0439\u043E\u0433\u043E \u043F\u043E\u0432\u0435\u0440\u043D\u0443\u0442\u0438 \u043F\u0440\u043E\u0442\u044F\u0433\u043E\u043C 14 \u0434\u043D\u0456\u0432 \u0437 \u043C\u043E\u043C\u0435\u043D\u0442\u0443 \u043E\u0442\u0440\u0438\u043C\u0430\u043D\u043D\u044F. \u0422\u043E\u0432\u0430\u0440 \u043F\u043E\u0432\u0438\u043D\u0435\u043D \u0431\u0443\u0442\u0438 \u0431\u0435\u0437 \u043E\u0437\u043D\u0430\u043A \u0432\u0438\u043A\u043E\u0440\u0438\u0441\u0442\u0430\u043D\u043D\u044F \u0442\u0430 \u0437 \u043D\u0430\u044F\u0432\u043D\u0456\u0441\u0442\u044E \u0443\u0441\u0456\u0445 \u043E\u0442\u0440\u0438\u043C\u0430\u043D\u0438\u0445 \u0435\u0442\u0438\u043A\u0435\u0442\u043E\u043A. \u041E\u0431\u043E\u0432\'\u044F\u0437\u043A\u043E\u0432\u043E \u043F\u043E\u043F\u0435\u0440\u0435\u0434\u044C\u0442\u0435 \u043D\u0430\u0441, \u0449\u043E \u043F\u043B\u0430\u043D\u0443\u0454\u0442\u0435 \u043F\u043E\u0432\u0435\u0440\u0442\u0430\u0442\u0438 \u0442\u043E\u0432\u0430\u0440, \u043D\u0430\u0434\u0456\u0441\u043B\u0430\u0432\u0448\u0438 \u043F\u043E\u0432\u0456\u0434\u043E\u043C\u043B\u0435\u043D\u043D\u044F \u043D\u0430 \u0435\u043B\u0435\u043A\u0442\u0440\u043E\u043D\u043D\u0443 \u0430\u0434\u0440\u0435\u0441\u0443: SkybaAV@gmail.com  ]]></string>
    <string name="email_error">Невірний email</string>
    <string name="phone_error">Невірний формат номеру телефону</string>
    <string name="city_error">Введіть місто доставки</string>
    <string name="summ_to_pay">Загальна сумма:</string>
    <string name="pay">Спосіб оплати:</string>
    <string name="delivery">Спосіб доставки:</string>
    <string name="button_zakaz">Оформити замовлення</string>
    <string name="text_novaposhta_zakaz">Доставка до обранного відділення\n"Нової Пошти" (оплата за послуги перевезення при отриманні)</string>
    <string name="text_pay_deliver">Сплата за вироби при отриманні</string>
    <string name="text_zakaz_pikup">Самовивіз</string>
    <string name="text_zakaz_liqpay">За допомогою сервісу LiqPay</string>
    <string name="text_zakaz_pikup2">Самовивіз з м.Києва, метро Харківська</string>

    <string name="text_novaposhta_zakaz2">Оберіть адресу доставки</string>


    <string name="fragment_filters">Фільтри</string>


    <string name="fragment_card_make_checkout">Оформити замовлення</string>
    <string name="fragment_card_empty_basket">Корзинка пуста. Але її завжди можна наповнити :)</string>
    <string name="fragment_card_button_main">Каталог</string>
    <string name="bottom_sheet_checkout">Оформити замовлення</string>
    <string name="bottom_sheet_et">Введіть місто</string>
    <string name="card_order_button_pay">Сплатити</string>
    <string name="fragment_category_button_call">Зателефонувати нам :)</string>
    <string name="fragment_category_settings">Застосувати</string>
    <string name="fragment_category_sort">Сортування:</string>
    <string name="fragment_category_name">Найменування</string>
    <string name="fragment_category_low">Спочатку дешеві</string>
    <string name="fragment_category_rich">Спочатку дорогі</string>
    <string name="fragment_category_new">Спочатку нові</string>
    <string name="fragment_category_old">Давно додані</string>
    <string name="fragment_category_vid_spiska">Вид списку:</string>

    <string name="fragment_category_settings_cheap">От дешевых к дорогим</string>
    <string name="fragment_category_settings_expensive">От дорогих к дешевым</string>
    <string name="fragment_category_settings_byname">Сортировка по имени</string>
    <string name="fragment_category_settings_new">Новые первые</string>
    <string name="fragment_category_settings_old">Старые первые</string>

    <string name="fragment_about_about">Опис</string>
    <string name="fragment_other_category">Інші товари цієї категорії:</string>

    <string name="fragment_individual_your_name">Ваше ім\'я</string>
    <string name="fragment_individual_send">Відправити</string>
    <string name="fragment_individual_add_photo">Додати фото</string>
    <string name="fragment_individual_msg_hint">Схожий на равлика, але з ногами…</string>
    <string name="fragment_individual_opus" >    Якщо Ви хочете замовити індивідуальний виріб якого немає в нашому каталозі, Вам необхідно заповнити поля у формі нижче. Ім\'я, емейл, та максимально детальний опис Виробу який Ви бажаєте. При необхідності, додайте фотографію, натиснувши кнопку *Додати фото*</string>

    <string name="fragment_zakaz_all_summ" >Всього до сплати:</string>
    <string name="fragment_hint" >Ім\'я</string>
    <string name="fragment_zakaz_warehouse" >Оберіть склад</string>
    <string name="fragment_zakaz_city" >Місто</string>
    <string name="fragment_order_status_order" >Замовлення: </string>
    <string name="fragment_order_status_ok" >Добре </string>
    <string name="fragment_order_status_toast_message" >Будь-ласка, зареєструйтесь/увійдій у аккаунт для відображення Ваших замовлень </string>
    <string name="fragment_order_status_my_orders" >Мої замовлення </string>
    <string name="any_error" >Якась помилка... </string>

    <string name="any_error_reload" >Щось пішло не так. Перезавантажити ?</string>

    <string name="fragment_wish_name" >Мої бажання</string>
    <string name="dialog_exit_account" >, Ви дійсно хочете вийти з аккаунта?</string>

    <string name="fragment_order_dialog" >Перед тим як сплачувати, будь ласка, зателефонуйте менеджеру для підтвердження наявності товару. Ви впевнені що хочете сплатити ?</string>


    <string-array name="planets">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
        <item>Pluto</item>
    </string-array>
</resources>