<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.artmurka.artmurkaapp.views.fragments.IndividualFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:text="@string/fragment_individual_opus"
                android:textAlignment="textStart" />

            <Button
                android:id="@+id/btnAddPhoto"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:text="@string/fragment_individual_add_photo"
                android:layout_below="@+id/textInputLayout3"
                android:drawableLeft="@drawable/ic_add_a_photo_black_24dp"
                android:background="@null"/>

            <TextView
                android:id="@+id/tvChosingFile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""

                android:layout_alignBaseline="@+id/btnAddPhoto"
                android:layout_alignBottom="@+id/btnAddPhoto"
                android:layout_toRightOf="@+id/btnAddPhoto" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textInputLayout2">

                <EditText
                    android:id="@+id/etMsg"
                    android:layout_width="match_parent"
                    android:layout_height="140dp"
                    android:hint="@string/fragment_individual_msg_hint"
                    android:inputType="textMultiLine"
                    android:text="" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btnSend"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btnAddPhoto"
                android:layout_centerHorizontal="true"
                android:text="@string/fragment_individual_send" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textInputLayout1">

                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="example@goog..."
                    android:inputType="textEmailAddress"
                    android:text="" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:paddingTop="25dp"
                android:id="@+id/textInputLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView">

                <EditText
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/fragment_individual_your_name"
                    android:inputType="text"
                    android:text="" />
            </android.support.design.widget.TextInputLayout>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
